# phosphorgm

./: CMakeLists.txt  LICENSE.md  README.md  main.cpp
ast/: assign.cpp  assign.hpp  ast.hpp  astnode.cpp  astnode.hpp  binop.hpp  call.cpp  call.hpp  enum.hpp  expression.hpp  flowbreak.hpp  ifelse.hpp  literal.cpp  literal.hpp  loop.hpp  statement.cpp  statement.hpp  switch.hpp  unop.hpp  variable.cpp  variable.hpp  with.hpp
parser/: errors.cpp  errors.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  token.cpp  token.hpp
